--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,12 +6,153 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇫🇷_FR_法国_1
+    type: ssr
+    server: fr-am1-5.eqsunshine.com
+    port: 8181
+    password: RcfVcDzzB
+    cipher: aes-256-cfb
+    obfs: tls1.2_ticket_auth
+    protocol: origin
+  - &id002
+    name: 🇰🇷_KR_韩国_1
+    type: ss
+    server: 43.202.58.144
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id003
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 54.36.115.241
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id004
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: ahsorathiyaa.fly.dev
+    server: 107.148.194.239
+    port: 55504
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇯🇵_JP_日本_1
+    type: vmess
+    server: 15.152.34.79
+    port: 31845
+    cipher: auto
+    uuid: 323d8b87-345d-4065-b7df-2af764d2d1df
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇰🇷_KR_韩国_2
+    type: ss
+    server: 43.202.49.222
+    port: 2333
+    password: doub.io
+    cipher: aes-256-cfb
+  - &id007
+    name: 🇹🇼_TW_台湾
+    type: ss
+    server: 103.177.33.180
+    port: 443
+    password: 9e44e9ffe5c2
+    cipher: chacha20-ietf-poly1305
+    plugin: v2ray-plugin
+    plugin-opts:
+      mode: websocket
+      host: wtw1000mline004.chilines.club
+      path: /isaifqaagpi
+      mux: true
+  - &id008
+    name: 🇨🇾_CY_塞浦路斯
+    type: ss
+    server: 213.169.137.221
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 172.93.47.4
+    port: 10512
+    cipher: auto
+    uuid: 58781eee-baba-6666-baba-2ca0ada6568b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇯🇵_JP_日本_2
+    type: ss
+    server: 43.207.78.190
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
+    type: ss
+    server: api-a-asia-3.mcqqn.com
+    port: 61019
+    password: dbefcef0-836b-4d58-aa05-146f7e63f06f
+    cipher: chacha20-ietf-poly1305
+  - &id012
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
+    type: ss
+    server: api-a-asia-4.mcqqn.com
+    port: 61002
+    password: dbefcef0-836b-4d58-aa05-146f7e63f06f
+    cipher: chacha20-ietf-poly1305
+  - &id013
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: ss
+    server: api-a-asia-1.mcqqn.com
+    port: 61008
+    password: dbefcef0-836b-4d58-aa05-146f7e63f06f
+    cipher: chacha20-ietf-poly1305
+  - &id014
+    name: 🇰🇷_KR_韩国_3
+    type: ss
+    server: 13.125.74.132
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id015
+    name: 🇫🇷_FR_法国->🇦🇹_AT_奥地利
+    type: ss
+    server: 135.125.244.103
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: digitalocean.com
+    port: 8080
+    cipher: auto
+    uuid: 5f098028-ea22-42ea-abfd-9222cb298b74
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: RELAY-104.16.182.15-0593 | 14.518MB
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vceu.vpn66.eu.org
+  - &id017
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: www.codepen.io
     port: 443
     cipher: auto
-    uuid: de04add9-5c68-8bab-950c-08cd5320df18
+    uuid: 2cd39102-0799-4c61-abb6-2e7a258f0397
     alterId: 0
     tls: true
     skip-cert-verify: true
@@ -19,14 +160,52 @@ proxies:
     ws-opts:
       path: /vmess
       headers:
-        host: ahsorathiyaa.fly.dev
-  - &id002
-    name: 🇺🇸_US_美国_2
+        host: us-v.sshmax.xyz
+  - &id018
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
     type: vmess
-    server: 104.25.177.236
-    port: 8080
+    server: dc.xmrthnode.com
+    port: 42042
     cipher: auto
-    uuid: 20670d72-d0ab-469e-81f4-1564f03955b0
+    uuid: 61a06847-820f-3785-af90-506d3e988a12
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /th
+      headers:
+        host: dc.xmrthnode.com
+  - &id019
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 198.2.208.69
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    servername: www.71653718.xyz
+    network: ws
+    ws-opts:
+      path: /path/1689326360096
+  - &id020
+    name: 🇯🇵_JP_日本->🇬🇧_GB_英国
+    type: trojan
+    server: spuk.1234567890spcloud.com
+    port: 443
+    udp: true
+    password: 8073375f-656d-47bd-aee4-1c9d8bf0ccbb
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 162.159.50.55
+    port: 8880
+    cipher: auto
+    uuid: d7ca2363-81c2-43a0-f141-352815da3ac3
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -35,8 +214,8 @@ proxies:
       path: /qwer
       headers:
         host: uxx.vtcss.top
-  - &id003
-    name: 🇺🇸_US_美国_3
+  - &id022
+    name: 🇺🇸_US_美国_6
     type: vmess
     server: 104.16.44.213
     port: 8080
@@ -50,10 +229,10 @@ proxies:
       path: /qwer
       headers:
         host: uxx.vtcss.top
-  - &id004
-    name: 🇺🇸_US_美国_4
+  - &id023
+    name: 🇺🇸_US_美国_7
     type: vmess
-    server: 104.25.98.164
+    server: 104.25.177.236
     port: 8080
     cipher: auto
     uuid: 20670d72-d0ab-469e-81f4-1564f03955b0
@@ -65,305 +244,50 @@ proxies:
       path: /qwer
       headers:
         host: uxx.vtcss.top
-  - &id005
-    name: 🇺🇸_US_美国_5
+  - &id024
+    name: 🇺🇸_US_美国_8
     type: vmess
-    server: 137.175.63.135
-    port: 59009
+    server: 141.101.123.18
+    port: 8880
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇫🇷_FR_法国
-    type: ss
-    server: 135.125.244.103
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: vmess
-    server: qzcn2-01.dajuzi.cc
-    port: 15596
-    cipher: auto
-    uuid: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
+    uuid: d7ca2363-81c2-43a0-f141-352815da3ac3
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇺🇸_US_美国_6
-    type: trojan
-    server: 146.190.90.244
-    port: 443
-    udp: true
-    password: a185ed4c-2b5c-4a6f-a674-4b67f9c3bfbc
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇹🇼_TW_台湾
-    type: ss
-    server: 103.177.33.180
-    port: 443
-    password: 9e44e9ffe5c2
-    cipher: chacha20-ietf-poly1305
-    plugin: v2ray-plugin
-    plugin-opts:
-      mode: websocket
-      host: wtw1000mline004.chilines.club
-      path: /isaifqaagpi
-      mux: true
-  - &id010
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 216.52.183.244
-    port: 80
-    password: 83XvX4Vo%*3a
-    cipher: aes-128-gcm
-    plugin: obfs
-    plugin-opts:
-      mode: http
-  - &id011
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 89.163.220.99
-    port: 443
-    udp: true
-    password: 274fefdb-6159-4765-b3e8-c6050b23b48f
-    sni: mzy.windowsupdatea.com
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国_8
-    type: trojan
-    server: 74.217.179.22
-    port: 443
-    udp: true
-    password: 274fefdb-6159-4765-b3e8-c6050b23b48f
-    sni: mzy.windowsupdatea.com
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇰🇪_KE_肯尼亚
-    type: ss
-    server: 62.12.116.66
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id014
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
+  - &id025
     name: 🇺🇸_US_美国_9
     type: vmess
-    server: us.mlxg.org
-    port: 80
-    cipher: auto
-    uuid: c7442852-5a48-4456-8783-b7b8eebbca6c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us1.mlxg.org
-  - &id015
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 142.4.109.68
-    port: 46672
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
-    type: vmess
-    server: cdn.anycast.eu.org
-    port: 80
-    cipher: auto
-    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      headers:
-        host: week-permalink-samsung-omissions.trycloudflare.com
-  - &id017
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: 104.25.179.44
-    port: 8080
-    cipher: auto
-    uuid: 20670d72-d0ab-469e-81f4-1564f03955b0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: uxx.vtcss.top
-  - &id018
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 23.224.202.86
-    port: 57702
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇸🇬_SG_新加坡
-    type: vmess
-    server: 118.107.46.173
+    server: cf.dalazhi.eu.org
     port: 443
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/080712342310
-  - &id020
-    name: 🇭🇰_HK_香港
-    type: vmess
-    server: 43.154.233.89
-    port: 45516
-    cipher: auto
-    uuid: 2264f24e-d814-4aa6-98c0-ed5a8322a0eb
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /hk12/getData
-      headers:
-        host: hk12.verichains.co
-  - &id021
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 23.108.100.101
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    servername: www.40587333.xyz
-    network: ws
-    ws-opts:
-      path: /footers
-  - &id022
-    name: 🇷🇸_RS_塞尔维亚
-    type: vmess
-    server: 37.120.193.102
-    port: 52920
-    cipher: auto
-    uuid: 57170ff0-7180-4664-8f61-8debdda345f7
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇮🇳_IN_印度
-    type: ss
-    server: 139.59.1.39
-    port: 443
-    password: MWiIVYCyO8FfybKWhjt9Sz
-    cipher: chacha20-ietf-poly1305
-  - &id024
-    name: 🇨🇾_CY_塞浦路斯
-    type: vmess
-    server: 203.23.104.190
-    port: 443
-    cipher: auto
-    uuid: 495FAF9E-9775-4DC5-91F0-C4341B789B4F
+    uuid: 64480f4c-61c2-4d88-89c3-fc0045229bfc
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /speedtest
+      path: /kplxvws
       headers:
-        host: Dusseldorf.kotick.site
-  - &id025
+        host: us.dalazhi.eu.org
+  - &id026
     name: 🇹🇷_TR_土耳其_1
     type: ss
     server: 45.89.52.66
-    port: 9065
-    password: PeHSHm5SqEjBuEXE
+    port: 9001
+    password: UkXRsXvR6buDMG2Y
     cipher: aes-256-cfb
-  - &id026
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 47.104.240.230
-    port: 50002
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
   - &id027
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: digitalocean.com
-    port: 8080
-    cipher: auto
-    uuid: c3b11744-2b20-46af-f0d4-69122be36e74
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: vcus.vpn66.eu.org
-  - &id028
     name: 🇹🇷_TR_土耳其_2
     type: ss
     server: 45.89.52.66
-    port: 9011
-    password: M3t2ZEQcMGRWBjRa
+    port: 9014
+    password: KnJGad3FqTvjqbaX
     cipher: aes-256-cfb
-  - &id029
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
-    cipher: auto
-    uuid: 8abe9496-5e24-4e49-b566-dcf86116017d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /i99LgvSaslbsPLLQQ7j6Z
-      headers:
-        host: de5.irteh.fun
-  - &id030
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: 104.25.167.88
-    port: 443
-    cipher: auto
-    uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: a2284cc1
-      headers:
-        host: dedi2.1808.cf
 proxy-groups:
   - name: PROXY
     type: select
@@ -417,9 +341,6 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
-      - *id028
-      - *id029
-      - *id030
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -452,9 +373,6 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
-      - *id028
-      - *id029
-      - *id030
   - name: SELECT
     type: select
     proxies:
@@ -485,9 +403,6 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
-      - *id028
-      - *id029
-      - *id030
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
