--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -5,24 +5,34 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 二爷翻墙 https://1808.cf Node_1, server: cf.1808.cf, port: 30001, type: vmess, uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: 4a47e680, headers: {Host: ddp2.1808.cf}}}
-  - {name: 二爷翻墙 https://1808.cf Node_2, server: speed.cloudflare.com, port: 443, type: vmess, uuid: 4a47e680-d860-4e63-9fa6-813857fb0f42, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: 4a47e680, headers: {Host: ddp2.1808.cf}}}
-  - {name: 二爷翻墙 https://1808.cf Node_3, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_4, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl2.sharecentrepro.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_5, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl3.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: uk2.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf Node_7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf Node_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf Node_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf Node_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.ilovescp.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: USOVH.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: us.ilovescp.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_16, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_17, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
-  - {name: 二爷翻墙 https://1808.cf Node_18, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_1, server: cdn.anycast.eu.org, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_2, server: cdn.anycast.eu.org, port: 443, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_3, server: 128.199.230.17, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_4, server: 143.198.223.30, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_5, server: 152.69.223.147, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_6, server: 167.172.93.42, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_7, server: 157.245.159.7, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_8, server: 178.128.216.181, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_9, server: 168.138.180.229, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_10, server: 129.150.57.153, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_11, server: 138.2.106.77, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_12, server: 188.166.179.155, port: 80, type: vmess, uuid: e3a37909-487c-4748-8ba4-945290267018, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: e3a37909, headers: {Host: dd2.1808.cf}}}
+  - {name: 二爷翻墙 https://1808.cf Node_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf Node_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl3.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf Node_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: uk2.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf Node_16, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf Node_17, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf Node_18, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf Node_19, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf Node_20, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf Node_21, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_22, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: USOVH.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf Node_23, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: us.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_24, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl2.sharecentrepro.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_25, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_26, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_27, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
+  - {name: 二爷翻墙 https://1808.cf Node_28, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
@@ -47,6 +57,16 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_16
       - 二爷翻墙 https://1808.cf Node_17
       - 二爷翻墙 https://1808.cf Node_18
+      - 二爷翻墙 https://1808.cf Node_19
+      - 二爷翻墙 https://1808.cf Node_20
+      - 二爷翻墙 https://1808.cf Node_21
+      - 二爷翻墙 https://1808.cf Node_22
+      - 二爷翻墙 https://1808.cf Node_23
+      - 二爷翻墙 https://1808.cf Node_24
+      - 二爷翻墙 https://1808.cf Node_25
+      - 二爷翻墙 https://1808.cf Node_26
+      - 二爷翻墙 https://1808.cf Node_27
+      - 二爷翻墙 https://1808.cf Node_28
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -71,6 +91,16 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_16
       - 二爷翻墙 https://1808.cf Node_17
       - 二爷翻墙 https://1808.cf Node_18
+      - 二爷翻墙 https://1808.cf Node_19
+      - 二爷翻墙 https://1808.cf Node_20
+      - 二爷翻墙 https://1808.cf Node_21
+      - 二爷翻墙 https://1808.cf Node_22
+      - 二爷翻墙 https://1808.cf Node_23
+      - 二爷翻墙 https://1808.cf Node_24
+      - 二爷翻墙 https://1808.cf Node_25
+      - 二爷翻墙 https://1808.cf Node_26
+      - 二爷翻墙 https://1808.cf Node_27
+      - 二爷翻墙 https://1808.cf Node_28
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -95,6 +125,16 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_16
       - 二爷翻墙 https://1808.cf Node_17
       - 二爷翻墙 https://1808.cf Node_18
+      - 二爷翻墙 https://1808.cf Node_19
+      - 二爷翻墙 https://1808.cf Node_20
+      - 二爷翻墙 https://1808.cf Node_21
+      - 二爷翻墙 https://1808.cf Node_22
+      - 二爷翻墙 https://1808.cf Node_23
+      - 二爷翻墙 https://1808.cf Node_24
+      - 二爷翻墙 https://1808.cf Node_25
+      - 二爷翻墙 https://1808.cf Node_26
+      - 二爷翻墙 https://1808.cf Node_27
+      - 二爷翻墙 https://1808.cf Node_28
   - name: 📲 电报信息
     type: select
     proxies:
@@ -118,6 +158,16 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_16
       - 二爷翻墙 https://1808.cf Node_17
       - 二爷翻墙 https://1808.cf Node_18
+      - 二爷翻墙 https://1808.cf Node_19
+      - 二爷翻墙 https://1808.cf Node_20
+      - 二爷翻墙 https://1808.cf Node_21
+      - 二爷翻墙 https://1808.cf Node_22
+      - 二爷翻墙 https://1808.cf Node_23
+      - 二爷翻墙 https://1808.cf Node_24
+      - 二爷翻墙 https://1808.cf Node_25
+      - 二爷翻墙 https://1808.cf Node_26
+      - 二爷翻墙 https://1808.cf Node_27
+      - 二爷翻墙 https://1808.cf Node_28
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
@@ -141,6 +191,16 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_16
       - 二爷翻墙 https://1808.cf Node_17
       - 二爷翻墙 https://1808.cf Node_18
+      - 二爷翻墙 https://1808.cf Node_19
+      - 二爷翻墙 https://1808.cf Node_20
+      - 二爷翻墙 https://1808.cf Node_21
+      - 二爷翻墙 https://1808.cf Node_22
+      - 二爷翻墙 https://1808.cf Node_23
+      - 二爷翻墙 https://1808.cf Node_24
+      - 二爷翻墙 https://1808.cf Node_25
+      - 二爷翻墙 https://1808.cf Node_26
+      - 二爷翻墙 https://1808.cf Node_27
+      - 二爷翻墙 https://1808.cf Node_28
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -164,6 +224,16 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_16
       - 二爷翻墙 https://1808.cf Node_17
       - 二爷翻墙 https://1808.cf Node_18
+      - 二爷翻墙 https://1808.cf Node_19
+      - 二爷翻墙 https://1808.cf Node_20
+      - 二爷翻墙 https://1808.cf Node_21
+      - 二爷翻墙 https://1808.cf Node_22
+      - 二爷翻墙 https://1808.cf Node_23
+      - 二爷翻墙 https://1808.cf Node_24
+      - 二爷翻墙 https://1808.cf Node_25
+      - 二爷翻墙 https://1808.cf Node_26
+      - 二爷翻墙 https://1808.cf Node_27
+      - 二爷翻墙 https://1808.cf Node_28
   - name: 📢 谷歌FCM
     type: select
     proxies:
@@ -188,6 +258,16 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_16
       - 二爷翻墙 https://1808.cf Node_17
       - 二爷翻墙 https://1808.cf Node_18
+      - 二爷翻墙 https://1808.cf Node_19
+      - 二爷翻墙 https://1808.cf Node_20
+      - 二爷翻墙 https://1808.cf Node_21
+      - 二爷翻墙 https://1808.cf Node_22
+      - 二爷翻墙 https://1808.cf Node_23
+      - 二爷翻墙 https://1808.cf Node_24
+      - 二爷翻墙 https://1808.cf Node_25
+      - 二爷翻墙 https://1808.cf Node_26
+      - 二爷翻墙 https://1808.cf Node_27
+      - 二爷翻墙 https://1808.cf Node_28
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -228,6 +308,16 @@ proxy-groups:
       - 二爷翻墙 https://1808.cf Node_16
       - 二爷翻墙 https://1808.cf Node_17
       - 二爷翻墙 https://1808.cf Node_18
+      - 二爷翻墙 https://1808.cf Node_19
+      - 二爷翻墙 https://1808.cf Node_20
+      - 二爷翻墙 https://1808.cf Node_21
+      - 二爷翻墙 https://1808.cf Node_22
+      - 二爷翻墙 https://1808.cf Node_23
+      - 二爷翻墙 https://1808.cf Node_24
+      - 二爷翻墙 https://1808.cf Node_25
+      - 二爷翻墙 https://1808.cf Node_26
+      - 二爷翻墙 https://1808.cf Node_27
+      - 二爷翻墙 https://1808.cf Node_28
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
